# intent-guard

./: .gitignore  Dockerfile  README.md  ci.json  docker-compose.yaml  feature-example.md  features.md  pyproject.toml  requirements.txt
docs/: issues.md
hooks/claude-code/: settings.json
hooks/copilot/: hooks.json
hooks/cursor/: hooks.json
intent_guard/: __init__.py  cli.py  proxy.py
intent_guard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
intent_guard/sdk/: __init__.py  decision_cache.py  engine.py  log_redactor.py  mcp_proxy.py  providers.py  rate_limiter.py  response_guard.py  semantic_eval.py  tool_snapshot.py  validator.py  watcher.py
policies/: code-agent-safe.yaml  minimal.yaml  repo-write-guard.yaml
schema/: policy.yaml
tests/: conftest.py  test_advisory_mode.py  test_claude_pretooluse_hook_integration.py  test_decision_cache.py  test_encoded_payloads.py  test_hook_integration.py  test_hot_reload.py  test_injection_detection.py  test_integration_phases.py  test_log_redaction.py  test_ollama_provider_live_semantic.py  test_path_traversal.py  test_policy_validation.py  test_proxy_stdio.py  test_rate_limiting.py  test_response_inspection.py  test_rubric_scoring.py  test_secret_pii_scanning.py  test_semantic_eval.py  test_semantic_parsing.py  test_starter_templates.py  test_system_policy_webhook.py  test_tool_snapshot_detection.py
tests/fixtures/: semantic_eval_dataset.json  semantic_eval_verdicts.json
